<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:background="?selectableItemBackground"
    android:padding="5dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civAvatar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_user_avatar" />

    <LinearLayout
        android:id="@+id/llChatInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/civAvatar"
        android:layout_alignBottom="@+id/civAvatar"
        android:layout_toStartOf="@+id/tvChatTime"
        android:layout_toEndOf="@+id/civAvatar"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvChatName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:ellipsize="marquee"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollHorizontally="true"
            android:text="@string/tvChatName"
            android:textColor="@color/color_1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvLastMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:lines="1"
            android:maxLines="1"
            android:text="@string/tvLastMessage"
            android:textColor="@color/color_3"
            android:textSize="14sp"
            android:textStyle="normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvChatTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:text="@string/tvChatTime"
        android:textColor="@color/color_3"
        android:textSize="12sp"
        android:textStyle="normal" />

</RelativeLayout>