<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_2"
    android:orientation="vertical"
    tools:context=".activities.SetupProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/civUserAvatar"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:src="@drawable/ic_user_avatar"
                app:civ_border_color="@color/color_main_1"
                app:civ_border_width="1dp"
                app:srcCompat="@drawable/ic_user_avatar" />

            <TextView
                android:id="@+id/tvSetupProfile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tvSetupProfile"
                android:textAlignment="center"
                android:textColor="@color/color_2"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSetupProfileTip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/tvSetupProfileTip"
                android:textAlignment="center"
                android:textColor="@color/color_3"
                android:textSize="14sp"
                android:textStyle="normal" />

            <EditText
                android:id="@+id/edtSetupProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="10dp"
                android:hint="@string/edtSetupProfileName"
                android:lines="1"
                android:maxLength="100"
                android:maxLines="1"
                android:textColor="@color/color_2"
                android:textColorHighlight="@color/color_main_1"
                android:textSize="20sp" />

            <Button
                android:id="@+id/btnSetupProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/shape_background_gradient_corner_10dp"
                android:text="@string/btnSetupProfile"
                android:textAllCaps="false"
                android:textColor="@color/color_2"
                android:textSize="18sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>