<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/color_5"
    android:orientation="vertical"
    tools:context=".fragments.SettingFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/rlSettingTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvTheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/tvTheme"
                    android:textColor="?attr/color_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/btnSwitchTheme"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:layout_alignTop="@+id/tvTheme"
                    android:layout_alignBottom="@+id/tvTheme"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    app:lottie_rawRes="@raw/animation_3" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rlSettingLanguage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="10dp">

                <TextView
                    android:id="@+id/tvLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:text="@string/tvLanguage"
                    android:textColor="?attr/color_1"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvSettingLanguage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvLanguage"
                    android:layout_alignBottom="@+id/tvLanguage"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@+id/ivArrow"
                    android:gravity="center"
                    android:text="@string/tvEnglandFlag"
                    android:textColor="?attr/color_1"
                    android:textSize="18sp" />

                <ImageView
                    android:id="@+id/ivArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignTop="@+id/tvLanguage"
                    android:layout_alignBottom="@+id/tvLanguage"
                    android:layout_alignParentEnd="true"
                    app:srcCompat="@drawable/ic_arrow_right" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>